layout flickering fixed

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@
 }
 
 .app {
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -62,6 +61,8 @@ input {
 }
 .btn-container {
   display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
   justify-content: space-between;
 }
 
@@ -134,6 +135,12 @@ input::-webkit-calendar-picker-indicator {
     padding: 2rem;
     border-radius: 0.45rem;
     width: 30rem;
+  }
+  .btn-container {
+    flex-direction: row;
+  }
+  .app {
+    padding: 2rem;
   }
 }
 .result {
